toolchain/internal/core/analysis/testdata/errors/naming/field_annotation_not_camel.vdl
// @expect: E102

type User {
  @BadAnn
  id string
}
